fix spacing for navbar bars

--- a/components/UI/organisms/Navbar/Navbar.module.css
+++ b/components/UI/organisms/Navbar/Navbar.module.css
@@ -70,12 +70,12 @@ overflow: visible;
     position: absolute;
     opacity: 1;
     height:5px;
-    margin-top:.4%;
+    margin-top:8px;
     transform: rotate(0deg);
 }
 
 .bottom_bar{
-    margin-top:.8%;
+    margin-top:16px;
     height:5px;
     position: absolute; 
     transform: rotate(0);
